--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,20 @@
 ﻿<Window x:Class="SalatTimeWidgetApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Salat Time Widget" Height="220" Width="250" WindowStyle="None" AllowsTransparency="True" Background="#10000000" Topmost="True"
+        Title="Salat Time Widget" Height="290" Width="250" WindowStyle="None" AllowsTransparency="True" Background="#10000000" Topmost="True"
         MouseMove="Window_MouseMove"
         MouseDown="Window_MouseDown"
         MouseUp="Window_MouseUp">
     <Grid>
         <TextBlock Name="CurrentTimeTextBlock" Text="{Binding CurrentTime}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" FontFamily="Segoe UI" FontWeight="Bold" Margin="0,10,0,0">
+            <TextBlock.Foreground>
+                <SolidColorBrush Color="#FF00FF00" />
+            </TextBlock.Foreground>
+            <TextBlock.Effect>
+                <DropShadowEffect Color="Black" Direction="0" ShadowDepth="0" BlurRadius="4" Opacity="1" />
+            </TextBlock.Effect>
+        </TextBlock>
+        <TextBlock Name="CurrentBatteryPercentgaeTextBlock" Text="{Binding CurrentBatteryPercentage}" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="15" FontFamily="Segoe UI" FontWeight="Bold" Margin="0,35,0,0">
             <TextBlock.Foreground>
                 <SolidColorBrush Color="#FF00FF00" />
             </TextBlock.Foreground>
@@ -48,15 +56,5 @@
                 </GridView>
             </ListView.View>
         </ListView>
-
-        <!-- Refresh Button -->
-        <Button Content="Refresh" Click="RefreshButton_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="30" Margin="0,190,0,0" RenderTransformOrigin="0.477,1.553" Background="#10000000" FontSize="15" FontFamily="Segoe UI" FontWeight="Bold" >
-            <TextBlock.Foreground>
-                <SolidColorBrush Color="#FF00FF00" />
-            </TextBlock.Foreground>
-            <Button.Effect>
-                <DropShadowEffect Color="Black" Direction="0" ShadowDepth="0" BlurRadius="4" Opacity="1" />
-            </Button.Effect>
-        </Button>
     </Grid>
 </Window>
